# qgis-amazonlocationservice-plugin

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  README_ja.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: lint.yml  release.yml
location_service/: __init__.py  location_service.py  metadata.txt
location_service/functions/: map.py  maps.py  place.py  places.py  routes.py
location_service/ui/config/: config.py  config.ui
location_service/ui/map/: map.py  map.ui
location_service/ui/maps/: maps.py  maps.ui
location_service/ui/place/: place.py  place.ui
location_service/ui/places/: places.py  places.ui
location_service/ui/routes/: routes.py  routes.ui
location_service/ui/terms/: terms.py
location_service/utils/: click_handler.py  configuration_handler.py  external_api_handler.py
