[tool.poetry]
name = "Amazon Location Service"
version = "1.0.0"
description = "This plugin uses the functionality of Amazon Location Service in QGIS."
authors = ["Yasunori Kirimoto <info@dayjournal.dev>"]
readme = "README.md"
packages = [{ include = "location_service" }]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pyqt5-stubs = { version = "^5.15.0", platform = "win32" }
ruff = "^0.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = ["--import-mode=importlib"]
# filterwarnings = "ignore::DeprecationWarning"

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "B",
    "N",
    "UP",
    "I",
    "C90",
    "C4",
    "DTZ",
    "PIE",
    "PT",
    "Q",
    "SIM",
    "RUF",
]
ignore = ["N802", "E501", "RUF001"]

[tool.coverage.run]
source = ['location_service']
